# mineos

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  eigcon.f  fftsubs.f  green.f  green.h  locale.cmt.big  minos_bran.f  rcode.f  stations  syndat.f
DEMO/: README
DEMO/models/: CPacific.txt  NRussia.txt  README  prem_noocean.txt  prem_ocean.txt
doc/: README  benchmark.lyx  eigcon.lyx  examples.lyx  frame.lyx  fun.lyx  green.lyx  mineos-template.lyx  mineos.lyx  mineos_cover.eps  mineos_cover.xcf  model.lyx  syndat.lyx  tab.lyx  utilities.lyx
doc/Figures/: Fig4a.eps  FigsBILLLHN.eps  FigsBILLLHZ.eps  FigsTLYLHZ.eps  FspBILL.eps
doc/tex/: UserManual.lyx  UserManual.tex  benchmark.lyx  benchmark.tex  eigcon.lyx  eigcon.tex  examples.lyx  examples.tex  frame.lyx  frame.tex  fun.lyx  fun.tex  green.lyx  green.tex  model.lyx  model.tex  syndat.lyx  syndat.tex  tab.lyx  tab.tex  utilities.lyx  utilities.tex
doc/tex/Figures/: Fig1.eps  Fig1a.eps  Fig2.eps  Fig2a.eps  Fig3a.eps  FigsBILLLHE.eps  FigsBJTLHE.eps  FigsBJTLHN.eps  FigsBJTLHZ.eps  FigsTLYLHE.eps  FigsTLYLHN.eps  FspBJT.eps  FspTLY.eps
fdb/: fdb_eigen.f  fdb_eigen.h  fdb_io.h  fdb_site.h  fdb_sitechan.h  fdb_wfdisc.h  fdbs.f  swapn.c
gfs/: curse.f  disk2.c  ftoc.c  gfs.doc  gfs.f  ghead.f  glist.f  gtail.f  iutil.f  leodraw.c  leoinp.c  leolib.c  leolib.col  leotext.c  psscreendump.f  rotated.c  scr1.f  usr.f
scripts/: creat_origin
time/: time.f
utils/: cucss2sac.c  cucss2sac.h  eigen2asc.f  endi.c  preigen.f  simpledit.f  swap.c  wfendi.f
